# NotDec-evm2llvm

./: CMakeLists.txt
clients/: llvmout.py
cmake/: FindLLVM.cmake
docs/: README.md
docs/solidity_internals_zh/: README.md  layout_in_calldata.md  layout_in_memory.md  layout_in_storage.md  optimizer.md  source_mappings.md  variable_cleanup.md
include/notdec-evm2llvm/: EvmRuntimeDecls.h  FactLoader.h  InstructionLowerer.h  LlvmLowerer.h  SsaFactValidator.h  TacProgram.h
lib/: CMakeLists.txt  EvmRuntimeDecls.cpp  FactLoader.cpp  InstructionLowerer.cpp  LlvmLowerer.cpp  SsaFactValidator.cpp  TacProgram.cpp
scripts/: export-apehex-source-md.py  notdec-evm2llvm.py
test/: CMakeLists.txt
test/fixtures/arithmetic/: TAC_Block.csv  TAC_Def.csv  TAC_Op.csv  TAC_Use.csv  TAC_Variable_Value.csv
test/fixtures/entry_loop/: FormalArgs.csv  IRFallthroughEdge.csv  InFunction.csv  LocalBlockEdge.csv  PHIIncoming.csv  TAC_Block.csv  TAC_Block_Head.csv  TAC_Def.csv  TAC_Op.csv  TAC_Use.csv  TAC_Variable_Value.csv
test/fixtures/entry_order/: HighLevelFunctionName.csv  InFunction.csv  LocalBlockEdge.csv  TAC_Block.csv  TAC_Op.csv
test/fixtures/jump_table/: InFunction.csv  LocalBlockEdge.csv  PublicFunction.csv  TAC_Block.csv  TAC_Def.csv  TAC_Op.csv  TAC_Use.csv  TAC_Variable_Value.csv
test/fixtures/jumpi_condition/: HighLevelFunctionName.csv  LocalBlockEdge.csv  TAC_Block.csv  TAC_Def.csv  TAC_Op.csv  TAC_Use.csv  TAC_Variable_Value.csv
test/fixtures/opcode_coverage/: TAC_Block.csv  TAC_Def.csv  TAC_Op.csv  TAC_Use.csv  TAC_Variable_Value.csv
test/fixtures/phi_branch/: HighLevelFunctionName.csv  LocalBlockEdge.csv  PHIIncoming.csv  TAC_Block.csv  TAC_Block_Head.csv  TAC_Def.csv  TAC_Op.csv  TAC_Use.csv  TAC_Variable_Value.csv
test/fixtures/private_call/: ActualReturnArgs.csv  TAC_Block.csv  (+6 more)
tools/: CMakeLists.txt  evm2llvm.cpp
(+15 files in other folders)
